[gd_scene load_steps=2 format=3 uid="uid://c1n2p8vvkdqxm"]

[ext_resource type="Script" path="res://ui/LobbyBrowser.gd" id="1_browser"]

[node name="LobbyBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_browser")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Lobby Browser"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyList" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ButtonBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="Panel/VBox/ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Aktualisieren"

[node name="BackButton" type="Button" parent="Panel/VBox/ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zurück"

[node name="PasswordDialog" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PasswordDialog"]
layout_mode = 2

[node name="Label" type="Label" parent="PasswordDialog/VBox"]
layout_mode = 2
text = "Diese Lobby ist passwortgeschützt"
horizontal_alignment = 1

[node name="PasswordInput" type="LineEdit" parent="PasswordDialog/VBox"]
layout_mode = 2
secret = true
placeholder_text = "Passwort eingeben"

[node name="ButtonBox" type="HBoxContainer" parent="PasswordDialog/VBox"]
layout_mode = 2

[node name="OKButton" type="Button" parent="PasswordDialog/VBox/ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="CancelButton" type="Button" parent="PasswordDialog/VBox/ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Abbrechen"

